# taOS

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  pyproject.toml  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: add-to-project.yml  build-agent-images.yml  build-neko-cdp-image.yml  build-neko-rk3588-image.yml  ci.yml  dco.yml  dependabot-automerge.yml  fork-audit.yml  pr-base-guard.yml  security.yml
app-catalog/: catalog.yaml
app-catalog/templates/: starter-cpu.yaml  starter-nvidia-12gb.yaml  starter-rk3588-16gb.yaml
data/: config.yaml.example  guides.yaml
desktop/: app.html  chat.html  index.html  node_modules  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
desktop/src/: App.tsx  AppStandalone.test.tsx  AppStandalone.tsx  ChatStandalone.tsx  app-standalone-main.tsx  chat-main.tsx  sw.ts
docs/: AGENT_HANDOFF.md  RELEASING.md  STATUS.md  UPDATE_BREAKAGE_LOG.md  agent-qmd-serve-setup.md  catalog-platform-status.md  desktop-control.md  getting-started.md  mirror-policy.md  taos-agent-manual.md  upstreams.yml
docs/agent-manual/: 00-identity.md  01-rules.md  02-what-is-taos.md  03-facts.md  04-apps.md  05-chat.md  06-updates-privacy.md  07-after-update.md  08-answer-templates.md  09-os-control.md  10-image-prompting.md  index.md
docs/design/: abstraction-layers.md  app-store-platform.md  desktop-shell.md  external-agent-onboarding.md  framework-agnostic-runtime.md  openclaw-integration.md  plan-complete-and-polish.md  plan-llm-proxy.md  remote-desktop-app-audit.md  resource-scheduler.md
docs/release-notes/: v1.0.0-beta.md
docs/research/: rknn-image-generation.md
docs/runbooks/: controller-rescue.md  framework-swap.md  trace-querying.md
landing/: index.html
os-build/: build.sh
os-build/userpatches/: customize-image.sh
scripts/: audit-forks.py  audit-manifests.py  build-agent-manual.py  install-dify.sh  install-flux-fill.sh  install-iopaint.sh  install-lcm-dreamshaper.sh  install-llama-cpp.sh  install-ltx-video.sh  install-musicgpt.sh  install-ollama.sh  install-piper.sh  install-rk-llama-cpp.sh  install-rkllama.sh  install-rknpu.sh  install-sd-cpp.sh  install-sd-webui.sh  install-server.sh  install-tailscale.sh  install-wan2gp.sh  install-worker.ps1  install-worker.sh  migrate-manifests-to-requires-backends.py  pre-beta-to-beta.sh  rollback.sh  taos-deploy-helper.sh  taos-graceful-stop.sh
scripts/platform/: provision.sh
scripts/systemd/: taos-rk3588-perf.service  tinyagentos.service
site/docs/: mkdocs.yml
static/: manifest-chat.json  manifest-desktop.json
static/desktop/: chat.html  index.html
systemd/: taos-pre-shutdown.service  tinyagentos.service
tests/: conftest.py  test_a2a_bus.py  test_adapter_retry.py  test_agent_bridge.py  test_agent_debugger.py  test_agent_grants_store.py  test_agent_idempotency.py  test_agent_image_prefetch.py  test_agent_manual_compiled.py  test_agent_messages.py  test_agent_permitted_models.py  test_agent_registry.py  test_agent_registry_store.py  test_agent_tokens_store.py  test_app_startup_guard.py  test_apps_installed.py  test_auth.py  test_auth_context.py  test_auth_email_login.py  test_auth_middleware.py  test_auth_requests.py  test_auth_requests_store.py  test_auto_update_branch.py  test_auto_update_ping.py  test_backend_catalog_lifecycle.py  test_background_task_supervision.py  test_benchmark_runner.py  test_board_audit.py  test_board_audit_wiring.py  test_browser_container.py  test_browser_proxy_origin.py  test_browser_sessions.py  test_bulk_container_op.py  test_capability_map.py  test_chat_652_atomic_seq.py  test_chat_656_backpressure.py  test_chat_phase.py  test_chat_typing.py  test_cluster_tools.py  test_coding_apply_blocks.py  (+197 more)
tests/adapters/: test_acp_adapter.py
tests/catalog/: test_resolver.py  test_resolver_types.py
tests/cluster/: test_hardware_to_targets.py  test_local_worker_enroll.py  test_model_resolver.py
tests/installers/: test_hf_multi_installer.py  test_port_allocator.py  test_rkllamacpp_installer.py  test_script_installer.py
tests/projects/: test_a2a.py  test_routes_a2a.py  test_task_store.py
tests/routes/: test_browser_sessions_routes.py  test_install_targets_resolver.py  test_store_install_v2.py  test_store_popularity_route.py  test_store_resolve.py
tests/scheduling/: test_mesh_sync_security.py  test_toctou_atomicity.py
tests/scripts/: test_migrate_manifests.py
tests/shortcuts/: test_auth_capabilities.py  test_framework_shortcuts.py
tests/themes/: test_routes.py
tests/userspace/: conftest.py  test_broker.py  test_broker_route.py  test_data_store.py  test_e2e.py  test_immutability.py  test_install_security.py  test_package.py  test_routes.py  test_sdk_route.py  test_seed.py  test_store.py  test_stream_chat_package.py  test_trust.py  test_update_consent.py  test_url_guard.py
tests/worker/: test_agent_browser_caps.py  test_browser_container.py  test_browser_main.py  test_browser_server.py  test_pairing.py
tinyagentos/: __init__.py  __main__.py  agent_bridge.py  agent_chat_router.py  agent_image.py  agent_registry_store.py  agent_tokens_store.py  app.py  auth.py  auth_context.py  auth_middleware.py  auto_update.py  backend_adapters.py  base_store.py  board_audit.py  browser_proxy_origin.py  browser_sessions.py  coding_workspaces.py  config.py  data_snapshot.py  db_migrations.py  deployer.py  desktop_rebuild.py  feedback_store.py  framework_model_sync.py  frameworks.py  github_identities.py  github_oauth.py  hardware.py  install_registry.py  installation_state.py  knowledge_ingest.py  knowledge_store.py  lazy_backend_proxy.py  lifecycle_manager.py  litellm_config.py  litellm_migrate.py  llm_proxy.py  mail_client.py  mail_store.py  (+20 more)
tinyagentos/adapters/: acp_adapter.py  hermes_adapter.py  moltis_adapter.py  nanoclaw_adapter.py  nullclaw_adapter.py  openclaw_adapter.py  opencode_adapter.py  picoclaw_adapter.py  shibaclaw_adapter.py  zeroclaw_adapter.py
tinyagentos/agent_tools/: __init__.py  coding_loop.py  coding_model.py  (+2 more)
(+863 files in other folders)
